Switch default Ollama LLM model from deepseek-coder to qwen2.5-coder:1.5b

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ OPENAI_API_KEY=sk-your-key-here
 # ── Ollama (only needed if PROVIDER=ollama) ────────────────
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_EMBED_MODEL=nomic-embed-text
-OLLAMA_LLM_MODEL=deepseek-coder
+OLLAMA_LLM_MODEL=qwen2.5-coder:1.5b
 
 # ── OpenAI Models (only needed if PROVIDER=openai) ────────
 OPENAI_EMBED_MODEL=text-embedding-3-small
