Phase 1+2: Hybrid search, re-ranking, workspace persistence, new UI
Phase 1 - Retrieval Quality:
- Hybrid BM25+MMR retrieval with Reciprocal Rank Fusion (core/retriever.py)
- Contextual Retrieval: chunks prefixed with file-level headers (core/chunker.py)
- Cross-encoder re-ranking via BAAI/bge-reranker-base (core/assistant.py)

Phase 2 - UI & Persistence:
- Workspace registry backed by SQLite (core/workspace.py)
- Named ChromaDB collections per ingest session (core/vectorstore.py)
- FastAPI backend rewrite with file tree + content endpoints (web/server.py)
- 3-tab web UI: Overview / Explorer / Chat (web/static/)
- File Explorer with syntax-highlighted Code Viewer
- Markdown-rendered chat answers with source chips
- Save/load named workspaces

Deps & docs:
- Added langchain-ollama to requirements.txt
- Updated .gitignore for data/ runtime files
- Rewrote README with Phase 1+2 features, new project structure, requirements table

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@
 # ChromaDB vector store data
 chroma_db/
 
-# Cloned repos
+# Runtime data directory (cloned repos, workspace DB, chroma)
+data/repo_clone/
+data/workspaces.db
+data/chroma_db/
+
+# Cloned repos (root-level, legacy)
 repo_clone/
 
 # Python
