--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 langchain>=0.3.0
 langchain-community>=0.3.0
 langchain-openai>=0.2.0
+langchain-ollama>=0.2.0
 langchain-chroma>=0.2.0
 chromadb>=0.5.0
 openai>=1.0.0
@@ -10,3 +11,7 @@ python-dotenv>=1.0.0
 rich>=13.0.0
 fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
+
+# Phase 1: Hybrid Search + Re-ranking
+rank_bm25>=0.2.2              # BM25 keyword retriever (used by langchain-community)
+sentence-transformers>=3.0.0  # Cross-encoder re-ranker (BAAI/bge-reranker-base)
